[gd_scene load_steps=4 format=3 uid="uid://cdtbg4g0f08gi"]

[ext_resource type="Script" uid="uid://c732inf2a0hg5" path="res://scenes/rooms/world/play_display/card_module.gd" id="1_dgdn1"]
[ext_resource type="Texture2D" uid="uid://b0k4x7f3gaxsj" path="res://assets/texture/card/overclocker.png" id="3_lruwv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_20eq8"]
bg_color = Color(0, 0, 0, 0.498039)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5
anti_aliasing = false

[node name="CardModule" type="Node2D"]
script = ExtResource("1_dgdn1")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(115, 115)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
region_rect = Rect2(0, 0, 37, 37)
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 11
patch_margin_bottom = 11

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 13
theme_override_constants/margin_bottom = 13

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="ItemDisplay" type="Panel" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_20eq8")

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/MarginContainer/VBoxContainer/ItemDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
texture = ExtResource("3_lruwv")
expand_mode = 2
stretch_mode = 5

[node name="StorageDisplay" type="Panel" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_20eq8")

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/StorageDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HFlowContainer" type="HFlowContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/StorageDisplay/MarginContainer"]
visible = false
layout_mode = 2
alignment = 1
last_wrap_alignment = 2
